# marioismissing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mim/: cpu_ops.h  functions.h
src/main/: main.c
src/recomp/: mim_boot.c
tools/: rom_analyze.py
